[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/worm/bullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = 9.46043

[node name="bullet" type="Area2D"]
monitorable = false
script = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 27.9332, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="img" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 1 )
hframes = 4

[node name="live_timer" type="Timer" parent="."]
one_shot = true

[node name="anim_timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_bullet_area_entered"]
[connection signal="timeout" from="live_timer" to="." method="_on_live_timer_timeout"]
